--- a/todo-dashboard-2024-Q2-Maleesha113/src/App.css
+++ b/todo-dashboard-2024-Q2-Maleesha113/src/App.css
@@ -3,6 +3,7 @@
   display: flex;
   font-family: "Inter", sans-serif;
   font-weight: 600;
+  background-color: rgba(250, 250, 250, 1);
   
 }
 
@@ -17,43 +18,14 @@
 
 .main-content {
   flex: 1;
-  /* padding: 20px; */
-}
-
-/* src/components/Sidebar.css */
-.sidebar {
-  width: 272px;
-  height: 900px;
-  background-color: #33074F;
   padding: 20px;
-  box-shadow: rgba(51, 7, 79, 1);
 }
 
-.sidebar h2 {
-  color: #ffffff;
-}
-.sidebar ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-.sidebar ul li {
-  margin: 10px 0;
-}
-
-.sidebar ul li a {
-  text-decoration: none;
-  color: #ffffff;
-}
-
-.sidebar ul li a:hover {
-  text-decoration: underline;
-}
 
 /* Optional: src/components/Navbar.css */
 .navbar {
-  background-color: #333;
-  color: white;
+  background-color: rgba(255, 255, 255, 1);
+  color: rgb(0, 0, 0);
   padding: 10px;
 }
 
